--- a/package.json
+++ b/package.json
@@ -13,9 +13,17 @@
     "@emotion/styled": "^11.10.0",
     "@mui/lab": "^5.0.0-alpha.95",
     "@mui/material": "^5.10.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-jwt": "^7.7.5",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.2",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "eslint": "8.22.0",
